clusters/may-chang/nextcloud/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: nextcloud
  labels:
    app: nextcloud
    component: redis
spec:
  selector:
    app: nextcloud
    component: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
