clusters/may-chang/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
    component: service
spec:
  selector:
    app: nextcloud
    component: deployment
  ports:
    - name: http
      port: 80
      targetPort: http
